--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -30,6 +30,9 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
       - run: pnpm install --frozen-lockfile
       - run: pnpm publish
         env:
