--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -34,6 +34,6 @@ jobs:
         with:
           version: 10
       - run: pnpm install --frozen-lockfile
-      - run: pnpm publish
+      - run: pnpm publish --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
