--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -33,15 +33,13 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
-          scope: "@rinwaowuogba"
-          always-auth: true
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - uses: pnpm/action-setup@v4
         with:
           version: 10
       - run: pnpm install --frozen-lockfile
-      - run: pnpm publish --no-git-checks
+      - run: pnpm config set '//npm.pkg.github.com/:_authToken' "${{ secrets.NPM_TOKEN }}"
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: pnpm publish --no-git-checks
