--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           version: 10
       - run: pnpm install --frozen-lockfile
+      - run: pnpm build
       - run: pnpm config set '//npm.pkg.github.com/:_authToken' "${{ secrets.NPM_TOKEN }}"
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
