--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -35,6 +35,8 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 10
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: pnpm install --frozen-lockfile
       - run: pnpm build
       - run: pnpm config set '//npm.pkg.github.com/:_authToken' "${{ secrets.AUTH_TOKEN }}"
