--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -40,5 +40,5 @@ jobs:
           version: 10
       - run: pnpm install --frozen-lockfile
       - run: pnpm build
-      - run: pnpm config set '//npm.pkg.github.com/:_authToken' "${{ secrets.NPM_TOKEN }}"
+      # - run: pnpm config set '//npm.pkg.github.com/:_authToken' "${{ secrets.NPM_TOKEN }}"
       - run: pnpm publish --no-git-checks
