--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -34,11 +34,10 @@ jobs:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: pnpm/action-setup@v4
         with:
           version: 10
       - run: pnpm install --frozen-lockfile
       - run: pnpm build
-      # - run: pnpm config set '//npm.pkg.github.com/:_authToken' "${{ secrets.NPM_TOKEN }}"
       - run: pnpm publish --no-git-checks
