--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -34,7 +34,7 @@ jobs:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - uses: pnpm/action-setup@v4
         with:
           version: 10
